--- a/resources/css/variables.css
+++ b/resources/css/variables.css
@@ -8,10 +8,10 @@
   --color-wet-asphalt: #34495e;
   --color-midnight: #2c3e50;
   --color-delete: #c0392b;
+  --color-amarillo:#f1c40f;
 
   
 }
-
 
 
 
