--- a/resources/css/componentes.css
+++ b/resources/css/componentes.css
@@ -29,3 +29,174 @@
     .sdfdsfsd:active{
         transform: scale(1.12);
     }
+
+    .boton-editar{
+        background-color: var(--color-amarillo);
+        border: 2px solid var(--color-amarillo);
+        color: white;
+        width: 6rem;
+        border-radius: 5px;
+         transition: scale 120ms ease-in-out;
+
+        &:hover{
+            scale: 1.1;
+            background-color: white;
+            border: 2px solid var(--color-amarillo);
+            color: var(--color-amarillo);
+        }
+    }
+
+     .boton-eliminar{
+        background-color: var(--color-delete);
+        border: 2px solid var(--color-delete);
+        color: white;
+        width: 6rem;
+        border-radius: 5px;
+         transition: scale 120ms ease-in-out;
+         margin-top: .3rem;
+         
+        &:hover{
+            scale: 1.1;
+            background-color: white;
+            border: 2px solid var(--color-delete);
+            color: var(--color-delete);
+        }
+    }
+
+    .btn-crear-comite{
+      
+        background-color: var(--color-azul-principal);
+        border: 2px solid var(--color-azul-principal);
+        color: white;
+        width: 10rem;
+        height: 2.3rem;
+        border-radius: 5px;
+        margin-right: 2rem;
+         transition: scale 120ms ease-in-out;
+
+        &:hover{
+            scale: 1.1;
+            background-color: white;
+            border: 2px solid var(--color-azul-principal);
+            color: var(--color-azul-principal);
+        }
+    }
+
+
+    .boton-ver-tesis{
+        margin-left: 1rem;
+         background-color:#afafaf;
+        border: 2px solid #afafaf;
+        color: white;
+        width: 10rem;
+        height: 2.3rem;
+        border-radius: 5px;
+        margin-right: 2rem;
+         transition: scale 120ms ease-in-out;
+
+        &:hover{
+            scale: 1.1; 
+            background-color: white;
+            border: 2px solid #afafaf;
+            color: #afafaf;
+        }
+    }
+    .a-personalizado{
+         margin-left: 1rem;
+         background-color:var(--color-azul-principal);
+        border: 2px solid var(--color-azul-principal);
+        color: white;
+        width: 10rem;
+        height: 2.3rem;
+        border-radius: 5px;
+        margin-right: 2rem;
+         transition: scale 120ms ease-in-out;
+
+        &:hover{
+            scale: 1.1; 
+            background-color: white;
+            border: 2px solid var(--color-azul-principal);
+            color: var(--color-azul-principal);
+        }
+    }
+
+     .a-modificar{
+         margin-left: 1rem;
+         background-color:var(--color-azul-obscuro);
+        border: 2px solid var(--color-azul-obscuro);
+        color: white;
+        width: 10rem;
+        height: 2.3rem;
+        border-radius: 5px;
+        margin-right: 2rem;
+         transition: scale 120ms ease-in-out;
+
+        &:hover{
+            scale: 1.1; 
+            background-color: white;
+            border: 2px solid var(--color-azul-obscuro);
+            color: var(--color-azul-obscuro);
+        }
+    }
+
+    .a-clonar{
+         margin-left: 1rem;
+         background-color:var(--color-amathyst);
+        border: 2px solid var(--color-amathyst);
+        color: white;
+        width: 10rem;
+        height: 2.3rem;
+        border-radius: 5px;
+        margin-right: 2rem;
+         transition: scale 120ms ease-in-out;
+
+        &:hover{
+            scale: 1.1; 
+            background-color: white;
+            border: 2px solid var(--color-amathyst);
+            color: var(--color-amathyst);
+        }
+    }
+
+    .boton-editar2{
+         margin-left: 1rem;
+         background-color:var(--color-amarillo);
+        border: 2px solid var(--color-amarillo);
+        color: white;
+        width: 10rem;
+        height: 2.3rem;
+        border-radius: 5px;
+        margin-right: 2rem;
+         transition: scale 120ms ease-in-out;
+
+        &:hover{
+            scale: 1.1; 
+            background-color: white;
+            border: 2px solid var(--color-amarillo);
+            color: var(--color-amarillo);
+        }
+    }
+
+
+    .crear-tesis{
+        margin-left: 1rem;
+         background-color:var(--color-verde-Nephiris);
+        border: 2px solid var(--color-verde-Nephiris);
+        color: white;
+        width: 13rem;
+        height: 2.3rem;
+        border-radius: 5px;
+        margin-right: 2rem;
+         transition: scale 120ms ease-in-out;
+
+        &:hover{
+            scale: 1.1; 
+            background-color: white;
+            border: 2px solid var(--color-verde-Nephiris);
+            color: var(--color-verde-Nephiris);
+        }
+    }
+
+
+
+   
