--- a/resources/css/variables.css
+++ b/resources/css/variables.css
@@ -1,6 +1,6 @@
 :root {
   --color-azul-principal: #3498db;
-  --color-azul-obscuro: #355C7D;
+  --color-azul-obscuro: #8e44ad;
   --color-belize: #2980b9;
   --color-verde-Nephiris: #27ae60;
   --color-coral: #ecf0f1;
@@ -10,7 +10,7 @@
   --color-delete: #c0392b;
   --color-amarillo:#f1c40f;
   --color-tablas:#1C2C40 ;
-  
+  --color-azul-titulos:#3a0ca3;
   
 }
 
