--- a/resources/css/componentes.css
+++ b/resources/css/componentes.css
@@ -197,6 +197,38 @@
         }
     }
 
+    .titulo-contenedor {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  margin: 2rem 0 1rem 0;
+}
+
+.barra {
+  width: 8px;
+  height: 45px;
+  background: linear-gradient(180deg, #7209b7, #3a0ca3);
+  border-radius: 5px;
+}
+
+.titulo-componente {
+  font-size: 2.5rem;
+  font-weight: 700;
+  color: var(--color-azul-titulos);
+  position: relative;
+}
+
+/* Línea inferior decorativa */
+.titulo-componente::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 3px;
+  background-color: var(--color-azul-titulos);
+  margin-top: 6px;
+  border-radius: 3px;
+}
+
 
 
    
