--- a/resources/css/variables.css
+++ b/resources/css/variables.css
@@ -11,6 +11,13 @@
   --color-amarillo:#f1c40f;
   --color-tablas:#1C2C40 ;
   --color-azul-titulos:#3a0ca3;
+  --color-morado-1:#4b1c71;
+  --color-morado-2:#7f4ca5;
+  --color-morado-3:#B57EDC;
+  --color-morado-4:#dbb6ee;
+  --color-morado-5:#fcd7fc;
+  
+
   
 }
 
